--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -18,9 +18,7 @@
 }
 
 /* Colors */
-:root {
-  
-}
+
 
 /* Smooth scroll behavior */
 :root {
@@ -135,9 +133,9 @@ section {
   transition: 0.3s;
 }
 
-.breadcrumbs nav ol a:hover {
-  text-decoration: underline;
-}
+/* .breadcrumbs nav ol a:hover {
+  /* text-decoration: underline; 
+} */
 
 .breadcrumbs nav ol li+li {
   padding-left: 10px;
@@ -267,7 +265,7 @@ section {
 
 .topbar .contact-info i a:hover {
   color: #fff;
-  text-decoration: underline;
+  /* text-decoration: underline; */
 }
 
 .topbar .social-links a {
@@ -1951,7 +1949,6 @@ section {
     left: 0;
     right: 0;
     height: calc(50% + 20px);
-    background-color: #fff;
   }
 }
 
